--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -24,7 +24,6 @@ source(here::here("Validation/Simulations", "power_mcs_2_levels.R")) # Estimate 
 source(here::here("Validation/Simulations", "validate_power_mdes_sample_blocked_i1_2c.R")) # 
 ```
 
-
 ### Parameters for Monte Carlo Simulation Runs
 
 #### Validating
@@ -33,13 +32,13 @@ source(here::here("Validation/Simulations", "validate_power_mdes_sample_blocked_
 rho <- c(0,0.2,0.5,0.8)
 ncl <-2 #done
 procs <- c("Bonferroni", "BH", "Holm","WY") #done
-design <- c("Blocked_i1_2c", "Blocked_i1_2f", "Blocked_i1_2r") #done
+design <- c("Blocked_i1_2c") #done
 M <- 2 #done
 MDES <- rep(0.125, M) #done
 p.j.range <- c(0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5) #done
 p.j <- 0.5 #done
-S = 2000 #done
-B = 10000 #done
+S = 1000 #done
+B = 2 #done
 J = 20 # done
 n.j = 100 #done
 theta <- matrix(0,M,M) #done 
@@ -48,25 +47,25 @@ omega <- rep(0,M) #done
 Gamma.00 <- rep(0,M) #done
 sig.sq <- rep(1,M)
 alpha <- 0.05 #done
-ICC <- rep(0, M) #done
+ICC <- rep(0.25, M) #done
 R2.2 <- rep(0,M) #done 
 R2.1 <- rep(0, M) #done
 maxT <- FALSE #done
-rho.0_lev1<-matrix(rho,M,M); diag(rho.0_lev1) <- 1 #done
-rho.0_lev2<-matrix(rho,M,M); diag(rho.0_lev2) <- 1 #done
-rho.1_lev2<-matrix(rho,M,M); diag(rho.1_lev2) <- 1 #done
 check <- TRUE #done
+storage_path <- "./Validation/data"
+validation_name <- "two_level_constant_effect"
 ```
 
 ### Firing Up & Storing Results from Monte Carlo Simulation Runs
 
 ```{r}
-tic()
- validate_power_blocked_i1_2c(rho = rho, ncl = ncl, procs = procs, design = design, M = M, MDES = MDES,
-                             p.j.range = p.j.range, p.j = p.j, S = S, B = B, J = J, 
-                             n.j = n.j, theta = theta, omega = omega, Gamma.00 = Gamma.00, sig.sq = sig.sq,
-                             alpha = alpha, ICC = ICC, R2.2 = R2.2, R2.1 = R2.1, maxT = maxT, rho.0_lev1 = rho.0_lev1,
-                             rho.0_lev2 = rho.0_lev2, rho.1_lev2 = rho.1_lev2, check = check)
+tic("validating_two_level_block_constant_effect")
+#Change naming conventions later.
+validate_power_blocked_i1_2cfr(rho = rho, ncl = ncl, procs = procs, design = design, M = M, MDES = MDES,
+                                 p.j.range = p.j.range, p.j = p.j, S = S, B = B, J = J, 
+                                 n.j = n.j, theta = theta, omega = omega, Gamma.00 = Gamma.00, sig.sq = sig.sq,
+                                 alpha = alpha, ICC = ICC, R2.2 = R2.2, R2.1 = R2.1, maxT = maxT, rho.0_lev1 = rho.0_lev1,
+                                 rho.0_lev2 = rho.0_lev2, rho.1_lev2 = rho.1_lev2, check = check, storage_path = storage_path, validation_name = validation_name)
 toc()     
 ```
 
