--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -15,6 +15,7 @@ library(multtest)  # Multiple Testing Procedures package
 library(tictoc)    # For timing of the scripts
 library(here)      # For relative path sourcing
 library(pum)       # For Power Under Multiplicity Package
+library(dplyr)     # For combining different dataframes
 ```
   
 ```{r sourcefiles, warnings = FALSE, message = FALSE}
@@ -29,7 +30,7 @@ source(here::here("Validation/Simulations", "validate_power_mdes_sample_blocked_
 ```{r constant_effect_power_up_comparison}
 rho <- c(0.5)
 ncl <-2 #done
-procs <- c("Bonferroni", "BH", "Holm","WY") #done
+procs <- c("Bonferroni", "BH", "Holm") #done
 design <- c("Blocked_i1_2c") #done
 M <- 3 #done
 MDES <- rep(0.125, M) #done
@@ -37,8 +38,8 @@ S = 2 #done
 B = 2 #done
 J = 20 # done
 n.j = 100 #done
-p.j.range <- rep(0.5,J) #done
 p.j <- 0.5 #done
+p.j.range <- rep(0.5,J) #done
 theta <- matrix(0,M,M) #done 
 diag(theta) <- 0 # done
 omega <- rep(0,M) #done
@@ -60,7 +61,7 @@ validation_name <- "Blocked_i1_2c"
 tic("validating_two_level_block_constant_effect")
 #Change naming conventions later.
 validate_power_blocked_i1_2cfr(rho = rho, ncl = ncl, procs = procs, design = design, M = M, MDES = MDES,
-                                 p.j.range = p.j.range, p.j = p.j, S = S, B = B, J = J, 
+                                 p.j = p.j,p.j.range = p.j.range, S = S, B = B, J = J, 
                                  n.j = n.j, theta = theta, omega = omega, Gamma.00 = Gamma.00, sig.sq = sig.sq,
                                  alpha = alpha, ICC = ICC, R2.2 = R2.2, R2.1 = R2.1, maxT = maxT, rho.0_lev1 = rho.0_lev1,
                                  rho.0_lev2 = rho.0_lev2, rho.1_lev2 = rho.1_lev2, check = check, storage_path = storage_path, validation_name = validation_name)
