--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -38,6 +38,7 @@ library(tictoc)    # For timing of the scripts
 library(here)      # For relative path sourcing
 library(pum)       # For Power Under Multiplicity Package
 library(dplyr)     # For combining different dataframes
+library(pander)    # For good table format
 ```
 
 ```{r scriptFiles, warnings = FALSE, message = FALSE}
@@ -49,26 +50,51 @@ source(here::here("Validation/Simulations", "validate_power_mdes_sample_blocked_
 
 ## Power Validation
 
+In this section, we validate power results for different definitions of power, __minimum__, __individual__ and __complete__ for three multiple adjustment multiple methods, __Bonferroni__, __Benjamini Hocheberg__ and __Holm__.
 
+Each subsection of the power validation below is a variation of correlation between outcomes, __rho__ & the ratio of __false nulls__ in M outcomes. Below is a brief of our input parameters. For more details, please refer to the paper here [Insert Later].
 
+* design: _the research design of interest: blocked_i1_2c, blocked_i1_2f, blocked_i1_2r_ 
+* procs: _multiple adjustment procedures such as Bonferroni, Benjamini-Hocheberg, Holms_
+* M: _number of outcomes_
+* MDES: _minimum detectable effect size_
+* rho: _spearman correlation between outcomes_
+* ncl: _number of clusters to run parallel computation on your machine/server_
+* S: _number of samples for Monte Carlo Simulation of Power Estimation_ 
+* B: _number of samples for WestFall-Young MTP. The equivalent is snum in our method_
+* tnum: _number of test statistics (samples) for all procedures other than West-Fall Young. The default is set at 10,000_
+* J: _number of blocks_ 
+* n.j: _number of samples within a block_
+* p.j: _probability of being assigned to treatment when no blocking_ 
+* p.j.range: _vector of minimum and maximum probabilities of being assigned to treatment, across all sites_
+* theta: _MxM matrix of correlations between residuals in Level 2 model outcomes under no treatment and Level 2_
+* omega: _effect size variability, between 0 and 1, 0 if no variation in effects across blocks, vector length M_
+* Gamma.00: _grand mean outcome w/o treat, held 0, vector length M_
+* sig.sq: _vector length M, held at 1 for no_
+* alpha: _the significance level, 0.05 usually_
+* ICC: _a number, intraclass correlation; 0 if fixed model_
+* R2.2: _a vector of length M corresponding to R^2 for M outcomes of Level 2 (R^2 = variation in the data explained by the model)_
+* R2.1: _a vector of length M corresponding to R^2 for M outcomes of Level 1 (R^2 = variation in the data explained by the model)_
+* maxT: _?_
+* check: _checking to see if intermeidate outputs are as expected_
+* storage_path: _file path to store the validation results_
+* validation_name: _name of the validation file_
+* runSim: _if TRUE, we will re-run the simluation. if FALSE, we will pull previous run result_
+* runPump: _if TRUE, we will run method from our package. if FALSE, we will pull previous run result_
 
+### rho = 0.0 & numFalseNulls = M
 
-
-
-### 2 Level Constant Effect Comparison for Raw Power with PowerUp
-
-* ICC needs to be zero for constant and fixed effets
-
-```{r constant_effect_power_up_comparison}
-rho <- c(0.5)
-ncl <-2 
-procs <- c("Bonferroni", "BH", "Holm") 
+```{r rho0.0numFalseMSpecs, warning = FALSE, message = FALSE }
+# ICC needs to be zero for constant and fixed effets
 design <- c("Blocked_i1_2c")
+procs <- c("Bonferroni", "BH", "Holm") 
 M <- 3 
 MDES <- rep(0.125, M) 
-S = 2000 # (Number of samples for Monte Carlo Simulation)
-B = 2 # (Number of samples for WestFall-Young. The equivalent is snum in our new method)
-tnum = 10000 #The number of test statistics (samples) for all procedures other than Westfall-Young. The default is set at 10000
+rho <- c(0.0)
+ncl <-2 
+S = 2000 # Number of samples for Monte Carlo Simulation.
+B = 2 # Number of samples for WestFall-Young. The equivalent is snum in our new method.
+tnum = 10000 # Number of test statistics (samples) for all procedures other than Westfall-Young. The default is set at 10,000.
 J = 20 
 n.j = 100 
 p.j <- 0.5 
@@ -81,18 +107,16 @@ sig.sq <- rep(1,M)
 alpha <- 0.05 
 ICC <- rep(0, M) 
 R2.2 <- rep(0,M)  
-R2.1 <- rep(0, M) 
+R2.1 <- rep(0,M) 
 maxT <- FALSE 
-check <- FALSE #usually for checking the code. Do not need to  
+check <- FALSE # Usually for checking the code. Do not need to  
 storage_path <- "./Validation/data"
 validation_name <- "Blocked_i1_2c"
 runSim <- TRUE
 runPump <- TRUE
 ```
 
-### Firing Up & Storing Results from Monte Carlo Simulation Runs
-
-```{r}
+```{r rho0.0numFalseMRun}
 tic("validating_two_level_block_constant_effect")
 blocked_i1_2c_compare_results <- validate_power_blocked_i1_2cfr(rho = rho, ncl = ncl, procs = procs, design = design, M = M, MDES = MDES,
                                                                    p.j = p.j,p.j.range = p.j.range, S = S, B = B, tnum = tnum, J = J, 
@@ -100,12 +124,12 @@ blocked_i1_2c_compare_results <- validate_power_blocked_i1_2cfr(rho = rho, ncl =
                                                                    alpha = alpha, ICC = ICC, R2.2 = R2.2, R2.1 = R2.1, maxT = maxT, rho.0_lev1 = rho.0_lev1,
                                                                    rho.0_lev2 = rho.0_lev2, rho.1_lev2 = rho.1_lev2, check = check, storage_path = storage_path, validation_name = validation_name, runSim = runSim, runPump = runPump)
 toc(log = TRUE)
-print(blocked_i1_2c_compare_results)
-#View(blocked_i1_2c_compare_results)
+pander::pandoc.table(blocked_i1_2c_compare_results, paste0("PowerSimulation_", "rho_", rho,"_falseNull_",M), 
+                     style = "rmarkdown", split.tables = 90)
 ```
 
 
-## MDES function validation
+## MDES validation
 
 We are testing the MDES function by putting in the parameters of the simulated power function and checking if we receive an MDES estimation within range.
 
@@ -177,7 +201,7 @@ mdes_0125_bh_indiv <- pum::mdes_blocked_i1_2c(M = 3, numFalse = 3,J = 20, n.j = 
                                           R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", 
                                           rho = 0.5, omega = NULL,tnum = 1000, snum = 500, ncl = 8)
 toc()
-print(mdes_0125_bh_indiv)
+pander::pandoc.table(mdes_0125_bh_indiv, style = "rmarkdown")
 ```
 
 ```{r}
@@ -192,7 +216,7 @@ print(mdes_0125_holms_indiv1)
 ```
 
 
-### Non-Individual Power for MDES is NOT working
+### Non-Individual Power for MDES is Working Now
 
 ```{r}
 tic()
@@ -227,33 +251,6 @@ library(pum)
 ```
 
 ```{r}
-sample_BF_J_20 <- sample_blocked_i1_2c(M = 6, numFalse = 6, typesample = "J", J = NULL, n.j = 100, 
-                                    J0 = 10, n.j0 = NULL, MDES = 0.125, power = 0.9064167 ,
-                                    power.definition = "indiv", MTP = "BF", marginError = 0.05,
-                                    p = 0.5,alpha = 0.05,numCovar.1 = 5,numCovar.2 = 1,
-                                    R2.1 = 0.5,tnum = 10000, snum = 2000, ncl = 8)
-print(sample_BF_J_20)
-```
-
-```{r}
-tic()
-power_M3_BH_MDES0125 <- pum::power_blocked_i1_2c(M = 3, MTP = "BH", MDES = 0.125, numFalse = 3, J = 20, n.j = 50, 
-                         R2.1 = 0.5, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
-                         rho = 0.5,tnum = 10000, snum =2000, ncl = 8)
-toc()
-print(power_M3_BH_MDES0125)
-```
-
-```{r}
-tic()
-power_M3_HO_MDES0125 <- pum::power_blocked_i1_2c(M = 3, MTP = "HO", MDES = 0.125, numFalse = 3, J = 20, n.j = 50, 
-                         R2.1 = 0.5, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
-                         rho = 0.5,tnum = 10000, snum =2000, ncl = 8)
-toc()
-print(power_M3_HO_MDES0125)
-```
-
-```{r}
 tic()
 power_M3_BH_MDES0125 <- pum::power_blocked_i1_2c(M = 3, MTP = "BH", MDES = 0.125, numFalse = 3, J = 20, n.j = 50, 
                          R2.1 = 0.5, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
@@ -271,7 +268,6 @@ sample_BH_indiv_nj_50 <- sample_blocked_i1_2c(M = 3, numFalse = 3, MTP = "BH", t
 print(sample_BH_indiv_nj_50)
 ```
 
-
 ```{r}
 sample_BH_min1_J_20 <- sample_blocked_i1_2c(M = 3, numFalse = 3, typesample = "J", J = NULL, n.j = 50, 
                                     J0 = 10, n.j0 = NULL, MDES = 0.125, power = power_M3_BH_MDES0125["BH", "min1"] ,
@@ -279,6 +275,15 @@ sample_BH_min1_J_20 <- sample_blocked_i1_2c(M = 3, numFalse = 3, typesample = "J
                                     p = 0.5,alpha = 0.05,numCovar.1 = 5,numCovar.2 = 1,
                                     R2.1 = 0.5,tnum = 10000, snum = 2000, ncl = 8)
 print(sample_BH_min1_J_20)
+```
+
+```{r}
+tic()
+power_M3_HO_MDES0125 <- pum::power_blocked_i1_2c(M = 3, MTP = "HO", MDES = 0.125, numFalse = 3, J = 20, n.j = 50, 
+                         R2.1 = 0.5, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
+                         rho = 0.5,tnum = 10000, snum =2000, ncl = 8)
+toc()
+print(power_M3_HO_MDES0125)
 ```
 
 ```{r}
