--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -174,7 +174,7 @@ pander::pandoc.table(power_M3_BF_MDES0125, style = "rmarkdown", split.tables = 9
 ```
 
 ```{r mdesBonfIndiv}
-mdes_0125_bonf_indiv <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J = J, n.j = n.j, power = power_M3_BF_MDES0125["BF",    "indiv"],
+mdes_0125_bonf_indiv <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J = J, n.j = n.j, power = power_M3_BF_MDES0125[which(power_M3_BF_MDES0125$MTP == "BF"), "indiv"],
                                           power.definition = "indiv", MTP = "BF", marginError = marginError,
                                           p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
                                           R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
